--- a/Baconit/Panels/SubredditPanel.xaml
+++ b/Baconit/Panels/SubredditPanel.xaml
@@ -142,6 +142,14 @@
                                        Foreground="White"
                                        Text="Gilded" />
                         </Border>
+                        <Border HorizontalAlignment="Left"
+                                Background="Red"
+                                CornerRadius="2"
+                                Visibility="{x:Bind NsfwVisibility}">
+                            <TextBlock Margin="6,2,6,2"
+                                       Foreground="White"
+                                       Text="NSFW" />
+                        </Border>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Grid.Column="2"
